--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=8.3",
+    "ext-simplexml": "*",
     "tigress/file-manager": "^1.0"
   },
   "autoload": {
