Refactor to PHP 8.4

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=8.3",
+    "php": ">=8.4",
     "ext-simplexml": "*",
-    "tigress/file-manager": "^1.0"
+    "tigress/file-manager": ">=2024"
   },
   "autoload": {
     "psr-4": {
